--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,24 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["uuid",
+            "ulid",
+            "lodash/get",
+            "lodash/isEmpty",
+            "lodash/isEqual",
+            "@aws-amplify/core",
+            "buffer",
+            "@aws-crypto/sha256-js",
+            "crypto-js/hmac-sha256",
+            "crypto-js/lib-typedarrays",
+            "zen-observable",
+            "js-cookie",
+            "isomorphic-unfetch",
+            "@aws-crypto/crc32",
+            "fast-xml-parser",
+            "@aws-crypto/sha256-browser",
+            "axios","cookie","paho-mqtt","lodash/noop","lodash/flatten",
+          "camelcase-keys","url"],
             "outputPath": "dist/hdmt-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -25,6 +43,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
