--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.6",
     "aws-amplify": "^5.0.5",
     "bootstrap": "^3.4.1",
+    "cors": "^2.8.5",
     "globalthis": "^1.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
