--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-datatables": "^14.0.2",
     "aws-amplify": "^5.0.5",
     "bootstrap": "^3.4.1",
+    "bower": "^1.8.14",
     "cors": "^2.8.5",
     "datatables.net": "^1.13.1",
     "datatables.net-dt": "^1.13.1",
