dropdowns , first selected will be displayed and some more changes

--- a/src/assets/settings.json
+++ b/src/assets/settings.json
@@ -3,6 +3,7 @@
     "panelist": "Panelist",
     "viewer": "Viewer",
     "college":"College",
+    "agency": "Agency",
     "university":"University",
     "round_zero": "Pre Placement Talk",
     "round_one": "Interview Round 1 ",
