--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "@popperjs/core": "^2.11.6",
     "angular-datatables": "^14.0.2",
+    "angular-moment": "^1.3.0",
     "aws-amplify": "^5.0.5",
     "bootstrap": "^3.4.1",
     "bower": "^1.8.14",
@@ -31,6 +32,7 @@
     "datatables.net-dt": "^1.13.1",
     "globalthis": "^1.0.3",
     "jquery": "^3.6.2",
+    "moment": "^2.29.4",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
