modifed the manage candidate and manage panelist

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,8 +4,10 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine",
-      "@angular/localize"
+      // "jasmine",
+      // "@angular/localize"
+      "jest", 
+      "node"
     ]
   },
   "include": [
