--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "globalthis": "^1.0.3",
     "jquery": "^3.6.2",
     "moment": "^2.29.4",
+    "node-mailjet": "^6.0.0",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
@@ -45,7 +46,9 @@
     "@angular/localize": "^15.0.0",
     "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.2.5",
     "@types/jquery": "^3.5.14",
+    "@types/mocha": "^10.0.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
