--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
               "camelcase-keys",
               "url"
             ],
-            "outputPath": "dist/hdmt-frontend",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
